macro/src/snapshots/diplomat__tests__mod_with_rust_result.snap
---
source: macro/src/lib.rs
assertion_line: 726
expression: "rustfmt_code(&gen_bridge(parse_quote! {\n                            mod ffi\n                            {\n                                struct Foo {} impl Foo\n                                { pub fn bar(&self) -> Result<(), ()> { unimplemented!() } }\n                            }\n                        }).to_token_stream().to_string())"
---
mod ffi {
    #[repr(C)]
    #[derive(Clone, Copy)]
    struct Foo {}
    impl Foo {
        pub fn bar(&self) -> Result<(), ()> {
            unimplemented!()
        }
    }
    use core::ffi::c_void;
    use diplomat_runtime::*;
    #[no_mangle]
    extern "C" fn Foo_bar(this: &Foo) -> diplomat_runtime::DiplomatResult<(), ()> {
        this.bar().into()
    }
}
