macro/src/snapshots/diplomat__tests__self_params.snap
---
source: macro/src/lib.rs
expression: "rustfmt_code(&gen_bridge(parse_quote! {\n                            mod ffi\n                            {\n                                #[diplomat :: opaque] struct RefList < 'a >\n                                { data : & 'a i32, next : Option < Box < Self >>, } impl <\n                                'b > RefList < 'b >\n                                {\n                                    pub fn extend(& mut self, other : & Self) -> Self\n                                    { unimplemented! () }\n                                }\n                            }\n                        }).to_token_stream().to_string())"
---
mod ffi {
    #[repr(transparent)]
    struct RefList<'a> {
        data: &'a i32,
        next: Option<Box<Self>>,
    }
    impl<'b> RefList<'b> {
        pub fn extend(&mut self, other: &Self) -> Self {
            unimplemented!()
        }
    }
    #[no_mangle]
    extern "C" fn RefList_extend<'b>(this: &mut RefList<'b>, other: &RefList<'b>) -> RefList<'b> {
        this.extend(other)
    }
    #[no_mangle]
    extern "C" fn RefList_destroy<'a>(this: Box<RefList<'a>>) {}
}

